exports[`ScrollingActivity container renders properly 1`] = `
<div
  className={undefined}
  onScroll={undefined}>
  <div>
    <div
      className="activity-list">
      <div
        className="activity-item-container">
        <div
          className="activity-item">
          <div
            className="avatar-wrapper">
            <div
              className="avatar"
              style={undefined}>
              <span
                className="avatar-self" />
            </div>
          </div>
          <div
            className="content-container">
            <div
              className="meta">
              <div
                className="display-name"
                title="{name}">
                Ricky Testerson
              </div>
              <div
                className="published">
                Tuesday 12:22 PM
              </div>
            </div>
            <div
              className="activity-content">
              <div
                className="activity-text"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "hi",
                  }
                } />
            </div>
          </div>
          <div
            className="activity-post-actions">
            <div
              className="activity-post-action">
              <div
                className="post-action-item">
                <button
                  className="button"
                  onClick={[Function]}
                  onKeyUp={[Function]}>
                  <div
                    className="icon"
                    title="Flag this message" />
                </button>
              </div>
            </div>
            <div
              className="activity-post-action">
              <div
                className="post-action-item">
                <button
                  className="button"
                  onClick={[Function]}
                  onKeyUp={[Function]}>
                  <div
                    className="icon"
                    title="Delete this message" />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="separator">
          <p
            className="separator-text">
            <span>
              January 6
            </span>
          </p>
        </div>
      </div>
      <div
        className="activity-item-container">
        <div
          className="activity-item">
          <div
            className="avatar-wrapper">
            <div
              className="avatar"
              style={undefined}>
              <span
                className="avatar-letter">
                J
              </span>
            </div>
          </div>
          <div
            className="content-container">
            <div
              className="meta">
              <div
                className="display-name"
                title="{name}">
                Jon Langley
              </div>
              <div
                className="published">
                Friday 4:17 PM
              </div>
            </div>
            <div
              className="activity-content">
              <div
                className="activity-text"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "123",
                  }
                } />
            </div>
          </div>
          <div
            className="activity-post-actions">
            <div
              className="activity-post-action isHighlighted">
              <div
                className="post-action-item">
                <button
                  className="button"
                  onClick={[Function]}
                  onKeyUp={[Function]}>
                  <div
                    className="icon"
                    title="Flag this message" />
                </button>
              </div>
            </div>
            <div
              className="activity-post-action">
              <div
                className="action-spacer" />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="indicators">
      <div />
    </div>
  </div>
</div>
`;

exports[`ScrollingActivity container renders properly loading history 1`] = `
<div
  className={undefined}
  onScroll={undefined}>
  <div>
    <div
      className="spinner-container">
      <div
        className="spinner" />
    </div>
    <div
      className="activity-list">
      <div
        className="activity-item-container">
        <div
          className="activity-item">
          <div
            className="avatar-wrapper">
            <div
              className="avatar"
              style={undefined}>
              <span
                className="avatar-self" />
            </div>
          </div>
          <div
            className="content-container">
            <div
              className="meta">
              <div
                className="display-name"
                title="{name}">
                Ricky Testerson
              </div>
              <div
                className="published">
                Tuesday 12:22 PM
              </div>
            </div>
            <div
              className="activity-content">
              <div
                className="activity-text"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "hi",
                  }
                } />
            </div>
          </div>
          <div
            className="activity-post-actions">
            <div
              className="activity-post-action">
              <div
                className="post-action-item">
                <button
                  className="button"
                  onClick={[Function]}
                  onKeyUp={[Function]}>
                  <div
                    className="icon"
                    title="Flag this message" />
                </button>
              </div>
            </div>
            <div
              className="activity-post-action">
              <div
                className="post-action-item">
                <button
                  className="button"
                  onClick={[Function]}
                  onKeyUp={[Function]}>
                  <div
                    className="icon"
                    title="Delete this message" />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="separator">
          <p
            className="separator-text">
            <span>
              January 6
            </span>
          </p>
        </div>
      </div>
      <div
        className="activity-item-container">
        <div
          className="activity-item">
          <div
            className="avatar-wrapper">
            <div
              className="avatar"
              style={undefined}>
              <span
                className="avatar-letter">
                J
              </span>
            </div>
          </div>
          <div
            className="content-container">
            <div
              className="meta">
              <div
                className="display-name"
                title="{name}">
                Jon Langley
              </div>
              <div
                className="published">
                Friday 4:17 PM
              </div>
            </div>
            <div
              className="activity-content">
              <div
                className="activity-text"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "123",
                  }
                } />
            </div>
          </div>
          <div
            className="activity-post-actions">
            <div
              className="activity-post-action isHighlighted">
              <div
                className="post-action-item">
                <button
                  className="button"
                  onClick={[Function]}
                  onKeyUp={[Function]}>
                  <div
                    className="icon"
                    title="Flag this message" />
                </button>
              </div>
            </div>
            <div
              className="activity-post-action">
              <div
                className="action-spacer" />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="indicators">
      <div />
    </div>
  </div>
</div>
`;
